[tool.poetry]
name = "url_shortener"
version = "0.1.0"
description = "Simple URL shortener tool built with FastAPI"
authors = ["Sebastian Krol <sebkrl@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
pydantic = "^2.7.0"
sqlalchemy = "^2.0.30"
pydantic_settings = "^2.8.0"
alembic = "^1.13.1"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
autoflake = "^2.3.1"
flake8 = "^7.0.0"
mypy = "^1.10.0"
isort = "^5.13.2"
pre-commit = "^4.1.0"
black = "^24.4.2"
pytest-asyncio = "^0.24.0"
schemathesis = "^3.39.13"
testcontainers = "^4.8.0"
testcontainers-postgres = "^0.0.1rc1"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
